# pram-compiler

./: .gitignore  API.md  Cargo.toml  README.md  State.json  critiques.json  grounding.json  review_compiler_optimization_expert.md  review_joseph_s_chang.md  review_lila_zhang.md  review_ml_infrastructure_expert.md  review_parallel_algorithms_expert.md  review_performance_engineering_expert.md  review_sara_roy.md  tool_paper.tex  tool_paper_old.tex
benchmark_output/: comparison_report.json
data/: State.json  critique_triage.json  depth_improvement_plan.json  grounding.json
data/benchmarks/: experiment_results.json  statistical_report.json
docs/: problem_statement.md
docs/meta/: critique_triage.json  critiques.json  grounding.json  review_cesar_sanchez.md  review_roderick_bloem.md  review_vasco_vasconcelos.md
docs/reviews/: review_aniruddha_sinha.md  review_generative_models_expert.md  review_hashing_theory_expert.md  review_ml_systems_expert.md  review_neural_symbolic_integration_expert.md  review_reinforcement_learning_specialist.md  review_yuan_cheng.md
examples/: odd_even_sort.pram  prefix_sum.pram  simple_init.pram
implementation/: API.md  README.md
implementation/benchmark_output/: aks_sorting_network.c  centroid_decomposition.c  closest_pair.c  compact.c  ear_decomposition.c  flashsort.c  graph_coloring.c  hardware_counters.json  lcp_array.c  list_ranking.c  matrix_multiply.c  matrix_vector_multiply.c  (+20 more)
output/: output.c
paper/: tool_paper.tex  tool_paper_v1.tex
rayon_baseline_output/: rayon_baselines.csv  rayon_baselines.json
src/: cli.rs
(+143 files in other folders)
