[package]
name = "pram_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-traits = "0.2"
petgraph = "0.6"
rayon = "1.10"

[dev-dependencies]

[[example]]
name = "sort_demo"
path = "examples/sort_demo.rs"

[[example]]
name = "connectivity_demo"
path = "examples/connectivity_demo.rs"
